Okay, unittests mostly fixed.
- So the getmetadata API documentation appears out of date in that I can't get it to work, so that test fails.
- I need remove all unused code.
- I need to do documentation, but for the moment a developer could look at the unittests to get a general idea of how to use it.
- I need to refactor some things to make it a bit more elegant.

--- a/RackspaceCloudFiles/RackspaceCloudFilesTests/RackspaceCloudFilesTests.plist
+++ b/RackspaceCloudFiles/RackspaceCloudFilesTests/RackspaceCloudFilesTests.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>username</key>
-	<string>yourUsername</string>
+	<string>username</string>
 	<key>api_key</key>
-	<string>yourApikey</string>
+	<string>apikey</string>
 	<key>auth_url</key>
 	<string>https://identity.api.rackspacecloud.com/v2.0/tokens</string>
 </dict>
